--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:web": "expo export:web"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -45,8 +46,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-markdown-display": "^7.0.2",
-    "react-native-reanimated": "4.1.1",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
