fix: CommandError: expo export:web can only be used with Webpack. Use expo export for other bundlers.

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "bun run build:web",
-  "outputDirectory": "web-build",
+  "outputDirectory": "dist",
   "devCommand": "bun run web",
   "installCommand": "bun install",
   "framework": null,
