--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "expo export -p web && cp -r dist/client/_expo dist/server/_expo && cp dist/client/favicon.ico dist/server/favicon.ico 2>/dev/null || true",
+  "buildCommand": "expo export -p web && mkdir -p dist/server/_expo && cp -r dist/client/_expo/static dist/server/_expo/static && cp dist/client/favicon.ico dist/server/favicon.ico 2>/dev/null || true",
   "outputDirectory": "dist/server",
   "devCommand": "expo",
   "cleanUrls": true,
