feat: added disable on unchange and refresh button

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-EXPO_PUBLIC_SUPABASE_URL=<your_supabase_db_url>
-EXPO_PUBLIC_SUPABASE_KEY=<your_supabase_db_api_key>
-EXPO_PUBLIC_UI_DEV=<true_or_false_so_as_to_reduce_db_hits_during_dev>
+EXPO_PUBLIC_SUPABASE_KEY=""
+EXPO_PUBLIC_SUPABASE_URL=""
+EXPO_PUBLIC_UI_DEV=""
+VERCEL_OIDC_TOKEN=""
