--- a/eas.json
+++ b/eas.json
@@ -5,7 +5,12 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_SUPABASE_KEY": "EXPO_PUBLIC_SUPABASE_KEY",
+        "EXPO_PUBLIC_SUPABASE_URL": "EXPO_PUBLIC_SUPABASE_URL",
+        "EXPO_PUBLIC_UI_DEV": "EXPO_PUBLIC_UI_DEV"
+      }
     },
     "preview": {
       "android": {
