--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
     "lucide-react-native": "^0.475.0",
-    "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -56,8 +55,6 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
@@ -65,10 +62,9 @@
     "@expo/metro-config": "^54.0.13",
     "@expo/ngrok": "^4.1.0",
     "@types/react": "~19.1.10",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9.31.0",
     "eslint-config-expo": "~10.0.0",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.17",
     "typescript": "~5.9.2"
   },
   "private": true
