fix: cannot upload from mobile

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 EXPO_PUBLIC_SUPABASE_KEY="sb_publishable_epc_VU0EWh2M5lkBNtdDfg_KDeTt-e7"
 EXPO_PUBLIC_SUPABASE_URL="https://mgpsdtlxevqpxgrjxdfp.supabase.co"
-EXPO_PUBLIC_UI_DEV="true"
+EXPO_PUBLIC_UI_DEV="false"
