--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@supabase/supabase-js": "^2.90.1",
     "@tanstack/react-query": "^5.83.0",
     "@ungap/structured-clone": "^1.3.0",
+    "base64-arraybuffer": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~54.0.27",
@@ -32,6 +33,7 @@
     "expo-constants": "~18.0.11",
     "expo-dev-client": "^6.0.20",
     "expo-document-picker": "~12.0.2",
+    "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
