update: vercel.json for non-404 routing

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,16 @@
       "source": "/notes",
       "destination": "/",
       "permanent": false
+    },
+    {
+      "source": "/files",
+      "destination": "/",
+      "permanent": false
+    },
+    {
+      "source": "/settings",
+      "destination": "/",
+      "permanent": false
     }
   ],
   "rewrites": [
