--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nkzw/create-context-hook": "^1.1.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@rn-primitives/alert-dialog": "^1.2.0",
+    "@rn-primitives/checkbox": "^1.2.0",
     "@rn-primitives/dropdown-menu": "^1.2.0",
     "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/portal": "^1.3.0",
