feat: grid view added for notes and files

--- a/vercel.json
+++ b/vercel.json
@@ -24,6 +24,11 @@
       "source": "/calendar",
       "destination": "/",
       "permanent": false
+    },
+    {
+      "source": "/note/([^/]+)",
+      "destination": "/",
+      "permanent": false
     }
   ],
   "rewrites": [
