--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@lexical/code": "^0.39.0",
+    "@lexical/link": "^0.39.0",
+    "@lexical/list": "^0.39.0",
+    "@lexical/markdown": "^0.39.0",
+    "@lexical/react": "^0.39.0",
+    "@lexical/rich-text": "^0.39.0",
+    "@lexical/selection": "^0.39.0",
+    "@lexical/utils": "^0.39.0",
     "@nkzw/create-context-hook": "^1.1.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@rn-primitives/alert-dialog": "^1.2.0",
@@ -49,6 +57,7 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
+    "lexical": "^0.39.0",
     "lucide-react-native": "^0.475.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
