--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "build:web": "expo export --platform web",
-    "postbuild:web": "mkdir -p dist/server/_expo && cp -r dist/client/_expo/static dist/server/_expo/static && cp dist/client/favicon.ico dist/server/favicon.ico 2>/dev/null || true"
+    "deploy:web": "npm run build:web && eas deploy",
+    "deploy:web:prod": "npm run build:web && eas deploy --prod",
+    "deploy:web:easenv:preview": "eas env:exec --environment preview -- npm run build:web && eas deploy --environment preview",
+    "deploy:web:easenv:prod": "eas env:exec --environment production -- npm run build:web && eas deploy --prod --environment production"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
