--- a/app.json
+++ b/app.json
@@ -28,12 +28,10 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "server",
+      "output": "static", // Changed from "server"
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router"
-    ],
+    "plugins": ["expo-router"],
     "experiments": {
       "typedRoutes": true
     },
