--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "build:web": "expo export --platform web"
   },
   "dependencies": {
+    "@codemirror/commands": "^6.10.1",
+    "@codemirror/lang-markdown": "^6.5.0",
+    "@codemirror/language-data": "^6.5.2",
+    "@codemirror/state": "^6.5.4",
+    "@codemirror/view": "^6.39.11",
     "@expo/vector-icons": "^15.0.3",
     "@nkzw/create-context-hook": "^1.1.0",
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -25,6 +30,7 @@
     "@stardazed/streams-text-encoding": "^1.0.2",
     "@supabase/supabase-js": "^2.90.1",
     "@tanstack/react-query": "^5.83.0",
+    "@uiw/react-codemirror": "^4.25.4",
     "@ungap/structured-clone": "^1.3.0",
     "base64-arraybuffer": "^1.0.2",
     "class-variance-authority": "^0.7.1",
@@ -62,6 +68,7 @@
     "react-native-svg": "15.12.1",
     "react-native-syntax-highlighter": "^2.1.0",
     "react-native-web": "^0.21.0",
+    "react-native-webview": "^13.16.0",
     "react-native-worklets": "0.5.1",
     "react-syntax-highlighter": "^16.1.0",
     "tailwind-merge": "^3.4.0",
