--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
     "nativewind-env.d.ts",
-    "syntax-highlighter.d.ts"
+    "syntax-highlighter.d.ts",
+    "react-dom-client.d.ts"
   ]
 }
