--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:web": "expo export --platform web"
   },
   "dependencies": {
+    "@expensify/react-native-live-markdown": "^0.1.321",
     "@expo/vector-icons": "^15.0.3",
     "@nkzw/create-context-hook": "^1.1.0",
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -29,6 +30,7 @@
     "base64-arraybuffer": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "expensify-common": "^2.0.169",
     "expo": "~54.0.27",
     "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.11",
@@ -48,6 +50,7 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
+    "html-entities": "2.5.3",
     "lucide-react-native": "^0.475.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
@@ -62,7 +65,7 @@
     "react-native-svg": "15.12.1",
     "react-native-syntax-highlighter": "^2.1.0",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "0.5.1",
+    "react-native-worklets": "0.7.2",
     "react-syntax-highlighter": "^16.1.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
