--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "build:web": "expo export --platform web"
   },
   "dependencies": {
+    "@codemirror/commands": "^6.5.0",
+    "@codemirror/lang-markdown": "^6.3.0",
+    "@codemirror/language": "^6.11.0",
+    "@codemirror/search": "^6.5.0",
+    "@codemirror/state": "^6.4.0",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.35.0",
     "@expo/vector-icons": "^15.0.3",
+    "@lezer/highlight": "^1.1.7",
     "@nkzw/create-context-hook": "^1.1.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@rn-primitives/alert-dialog": "^1.2.0",
@@ -52,6 +60,7 @@
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-controller": "^1.20.6",
@@ -62,6 +71,7 @@
     "react-native-svg": "15.12.1",
     "react-native-syntax-highlighter": "^2.1.0",
     "react-native-web": "^0.21.0",
+    "react-native-webview": "^13.16.0",
     "react-native-worklets": "0.5.1",
     "react-syntax-highlighter": "^16.1.0",
     "tailwind-merge": "^3.4.0",
