--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 EXPO_PUBLIC_SUPABASE_KEY=""
 EXPO_PUBLIC_SUPABASE_URL=""
 EXPO_PUBLIC_UI_DEV=""
+EXPO_PUBLIC_AI_PROVIDER=""
+EXPO_PUBLIC_GROQ_API_KEY=""
+EXPO_PUBLIC_GEMINI_API_KEY=""
