--- a/eas.json
+++ b/eas.json
@@ -9,7 +9,9 @@
       "env": {
         "EXPO_PUBLIC_SUPABASE_KEY": "EXPO_PUBLIC_SUPABASE_KEY",
         "EXPO_PUBLIC_SUPABASE_URL": "EXPO_PUBLIC_SUPABASE_URL",
-        "EXPO_PUBLIC_UI_DEV": "EXPO_PUBLIC_UI_DEV"
+        "EXPO_PUBLIC_UI_DEV": "EXPO_PUBLIC_UI_DEV",
+        "EXPO_PUBLIC_AI_PROVIDER": "EXPO_PUBLIC_AI_PROVIDER",
+        "EXPO_PUBLIC_GROQ_API_KEY": "EXPO_PUBLIC_GROQ_API_KEY"
       }
     },
     "preview": {
