--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-svg": "15.12.1",
     "react-native-syntax-highlighter": "^2.1.0",
     "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
     "react-syntax-highlighter": "^16.1.0",
     "tailwind-merge": "^3.4.0",
