--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build:web": "expo export --platform web"
+    "build:web": "expo export --platform web",
+    "eas": "eas build"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -73,6 +74,7 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "eas-cli": "^16.0.0",
     "@babel/core": "^7.25.2",
     "@expo/metro-config": "^54.0.13",
     "@expo/ngrok": "^4.1.0",
