--- a/eas.json
+++ b/eas.json
@@ -12,7 +12,8 @@
         "EXPO_PUBLIC_UI_DEV": "EXPO_PUBLIC_UI_DEV",
         "EXPO_PUBLIC_AI_PROVIDER": "EXPO_PUBLIC_AI_PROVIDER",
         "EXPO_PUBLIC_GROQ_API_KEY": "EXPO_PUBLIC_GROQ_API_KEY",
-        "EXPO_PUBLIC_BACKEND_URL": "EXPO_PUBLIC_BACKEND_URL"
+        "EXPO_PUBLIC_BACKEND_URL": "EXPO_PUBLIC_BACKEND_URL",
+        "EXPO_PUBLIC_APP_URL": "EXPO_PUBLIC_APP_URL"
       }
     },
     "preview": {
